--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="tv_usuario">Usuario</string>
     <string name="tv_password">Contraseña</string>
     <string name="btn_acceso">Acceder</string>
+    <string name="et_numb_act">Actividad N#</string>
     <string name="et_name_act">Nombre de la actividad</string>
     <string name="et_descripcion_act">Descripcion de la actividad</string>
     <string name="et_fecha_asignacion">Fecha de Inicio</string>
